# lfsr

./: .travis.yml  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg
.github/: CODEOWNERS  dependabot.yml  stale.yml
jenkins/: Jenkinsfile  podTemplate.yaml
lfsr/: __init__.py  random.py
lfsr/tests/: test_lfsr.py
