[metadata]
name = lfsr
author = Anthony Oteri
author_email = anthony.oteri@gmail.com
description = Linear Feedback Shift Register
version = 0.1
license = MIT
license_file = LICENSE
platform = any

[options]
zip_safe = True
packages = find:
python_requires = >= 3.0
tests_require =
    pytest

[bdist_wheel]
universal = true

[sdist]
formats = zip,gztar

[flake8]
show_source = True